# voice-clone-web

./: .gitignore  LICENSE  README.md  pyproject.toml  start-dev.ps1
src/voice_clone_web/: app.py
src/voice_clone_web/web/: app.js  index.html  styles.css
