[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-clone-web"
version = "0.1.0"
description = "Standalone web UI for experimenting with Qwen3-TTS voice cloning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "numpy>=1.26,<3.0",
  "soundfile>=0.12,<1.0",
  "qwen-tts @ git+https://github.com/QwenLM/Qwen3-TTS.git",
]

[project.scripts]
voice-clone-web = "voice_clone_web.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
voice_clone_web = ["web/*"]
